# asmr

./: .Rhistory  .gitignore  README.md  dvc.yaml  maps.R  pyproject.toml
.dvc/: config
inputs/: .gitignore  Data Axle Historic Businesses.dvc  Detroit Parcel Data.dvc  Detroit_Boxes.geojson.dvc  NHGIS.dvc  Troy_MadisonHeights.geojson.dvc  ZCTA Boundaries.dvc  ZCTA Census Data.dvc  area_of_interest_zctas.csv.dvc  madison_heights_strip_mall.geojson
outputs/: .gitignore  Detroit_Biz.csv.dvc  clean_ocr.csv.dvc  colors.csv.dvc  csvs.dvc  ocr.csv.dvc  stitched.dvc
outputs/Panoids/: .gitignore  0-120k.csv.dvc  AllPanoids - 0.csv.dvc  AllPanoids - 10000.csv.dvc  AllPanoids - 100000.csv.dvc  AllPanoids - 1000000.csv.dvc  AllPanoids - 1010000.csv.dvc  AllPanoids - 1020000.csv.dvc  AllPanoids - 1030000.csv.dvc  AllPanoids - 1040000.csv.dvc  AllPanoids - 1050000.csv.dvc  AllPanoids - 1060000.csv.dvc  AllPanoids - 1070000.csv.dvc  AllPanoids - 1080000.csv.dvc  AllPanoids - 1090000.csv.dvc  AllPanoids - 110000.csv.dvc  AllPanoids - 1100000.csv.dvc  AllPanoids - 1110000.csv.dvc  AllPanoids - 1120000.csv.dvc  AllPanoids - 1130000.csv.dvc  AllPanoids - 1140000.csv.dvc  AllPanoids - 1150000.csv.dvc  AllPanoids - 1160000.csv.dvc  AllPanoids - 1170000.csv.dvc  AllPanoids - 1180000.csv.dvc  (+265 more)
src/: AllPoints.py  Street View.ipynb  Webscrapping.ipynb  ZCTA - 1980 to 2020.ipynb  ZCTA - 2011 to 2020.ipynb  aggregate_files.py  filter_panoids.py  filter_queryable_points.py  get_colors.py  get_flats.py  get_ocr.py  get_oxgraph.py  get_panoramas.py  get_queryable_points.py  login.py  points.py
(+4 files in other folders)
