[tool.poetry]
name = "asmr"
version = "0.1.0"
description = ""
authors = ["nathan kim <nathanckim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fiona = "^1.9.4.post1"
folium = "^0.14.0"
sodapy = "^2.2.0"
adjusttext = "^0.8"
plotly = "^5.17.0"
contextily = "^1.3.0"
mapclassify = "^2.6.0"
chart-studio = "^1.1.0"
rtree = "^1.0.1"
pygeos = "^0.14"
mtranslate = "^1.8"
osmnx = "^1.6.0"
selenium = "^4.12.0"
matplotlib = "^3.8.0"
undetected-chromedriver = "^3.5.3"
dvc = "^3.48.1"
dvc-gdrive = "^2.20.0"
bs4 = "^0.0.1"
seaborn = "^0.12.2"
python-dotenv = "^1.0.0"
ipykernel = "^6.27.1"
geopandas = "^0.14.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"